# chutes-audit

./: .gitignore  Dockerfile  README.md  audit.py  config.yml  docker-compose.yml  pyproject.toml
autoupdates/: autoupdate_steps.sh  autoupdater.py  launch_auditor.sh
config/: config.yml  config.yml.example
utils/: autoupdate_steps.sh  autoupdater.py  launch_auditor.sh
